Fix incorrectly colored issues in GUI
- Scrollbar for chats now correctly colored

- Vencord settings now correctly colored

- Apps selection in textbar now correctly colored

- Integrations for subbed servers in settings now correctly colored

--- a/extras/extra.css
+++ b/extras/extra.css
@@ -244,7 +244,7 @@
 }
 /* Emoji auto complete */
 #app-mount .autocomplete_df266d {
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0,0,0,.9);
     box-shadow: 0 0 10px 2px rgb(0, 0, 0);
 }
 
@@ -575,7 +575,7 @@
     color: var(--warning-red);
 }
 
-#app-mount .integration_d2f026{
+#app-mount .integrationWrapper__04dd5{
     background: rgba(0,0,0,0.4);
 }
 
@@ -746,4 +746,24 @@
 
 #app-mount .title__7f0f1{
     background-color: rgba(0, 0, 0, 0.45);
+}
+
+/* scroll bar for chats */
+#app-mount .auto_a48086::-webkit-scrollbar-thumb{
+    background-color: rgba(0, 0, 0, .7);
+}
+
+#app-mount .auto_a48086::-webkit-scrollbar-track{
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Vencord Settings */
+#app-mount .vc-addon-card{
+    background-color: rgba(0, 0, 0, 0.6);
+}
+
+/* Apps (in textbar) */
+#app-mount .categoryHeader_f97a5f{
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
 }
